playing with openjdk21